--- a/api-server/package.json
+++ b/api-server/package.json
@@ -4,6 +4,7 @@
   "description": "Restful books api",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index.js",
     "test": "npm run test"
   },
   "keywords": [
