--- a/api-server/package.json
+++ b/api-server/package.json
@@ -13,10 +13,12 @@
   "author": "Taghlaoui Oussama",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^2.2.0",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
     "mysql2": "^3.14.0",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "sequelize": "^6.37.7"
   }
 }
